<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="95dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="5dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/transectionCardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="10dp"
        app:cardCornerRadius="15dp"
        >

        <RelativeLayout
            android:id="@+id/changeBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#95F195"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp"
            >

            <TextView
                android:id="@+id/statusText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/transectioSuccess"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:id="@+id/fromTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fromtext"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_below="@+id/statusText"
                />

            <TextView
                android:id="@+id/toTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toText"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"

                android:layout_below="@+id/fromTextView"
                />

            <TextView
                android:id="@+id/fromUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="username"
                android:textSize="12sp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"

                android:layout_toRightOf="@+id/fromTextView"
                android:layout_below="@+id/statusText"
                />

            <TextView
                android:id="@+id/toUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="username"
                android:textSize="12sp"
                android:layout_marginStart="15dp"

                android:layout_toRightOf="@+id/fromTextView"
                android:layout_below="@+id/fromUserName"
                />

            <TextView
                android:id="@+id/sentAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Amount"
                android:textSize="12sp"
                android:layout_marginEnd="20dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>