<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    android:layout_height="225dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical"
        android:background="@color/gradientstart"
        >

        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/dialogUserImage"
            android:src="@drawable/elijah"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dialogUserName"
            android:textAlignment="center"
            android:text="username"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginBottom="5dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amountEditTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <EditText
                android:id="@+id/dialogAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterAmountText"
                android:textColor="@color/gradientend"
                android:singleLine="true"
                android:textSize="12sp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <RelativeLayout
                android:id="@+id/cancleBtn"
                android:background="@drawable/user_btn_back"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_centerInParent="true"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/cancelText"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/sendBtn"
                android:background="@drawable/user_btn_back"
                android:layout_width="0dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sendText"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingStart="20dp"
                    android:layout_centerInParent="true"
                    android:paddingEnd="20dp"
                    />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>